# react-native-nitro-event-source

./: .clang-format  .clang-tidy  .gitignore  NitroEventSource.podspec  README.md  clang-format.sh  lint-cpp.sh  nitro.json  package.json
.github/workflows/: cpp-lint.yml  format-code.yml  ios-build.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/nitroeventsource/: NitroEventSourcePackage.java
cpp/: HybridNitroEventSource.cpp  HybridNitroEventSource.hpp
example/: App.tsx  app.json  package.json  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/nitroeventsourceexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/NitroEventSourceExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/NitroEventSourceExample.xcodeproj/: project.pbxproj
example/ios/NitroEventSourceExample.xcodeproj/xcshareddata/xcschemes/: NitroEventSourceExample.xcscheme
example/ios/NitroEventSourceExample.xcworkspace/: contents.xcworkspacedata
ios/: Bridge.h
src/: event-source.ts  events.ts  index.ts  types.ts
src/specs/: nitro-event-source.nitro.ts
